--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "debug": "^2.6.0",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "lodash": "^4.17.4",
     "morgan": "^1.8.0",
     "socket.io": "^1.7.2"
   }
