--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./bin/www",
   "scripts": {
     "start": "NODE_ENV=production node ./bin/www",
-    "dev": "NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
+    "dev": "NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --progress --colors",
     "build": "NODE_ENV=production ./node_modules/.bin/webpack"
   },
   "repository": {
